# FlukaQueueSub

./: .gitignore  README.md  check_seeds.py  collect_results.py  conftest.py  launch_jobs.py  launch_jobs_htcondor.py  launch_jobs_lsf.py  launch_jobs_slurm.py  pyproject.toml  requirements.txt
backends/: base.py  htcondor.py  lsf.py  slurm.py  ts.py
core/: config.py  display.py  filesystem.py  fluka.py  utils.py
docs/superpowers/plans/: 2026-06-05-queue-system-refactor.md  2026-06-05-yaml-config-refactor.md
docs/superpowers/specs/: 2026-06-05-queue-system-design.md  2026-06-05-yaml-config-design.md
scripts/: launch_jobs_htcondor.py  launch_jobs_lsf.py  launch_jobs_slurm.py  launch_jobs_ts.py
test_sim/job_0001/: test_sim_0001.inp
test_sim/job_0002/: test_sim_0002.inp
tests/: test_collect_results.py  test_launch_jobs.py
tests/backends/: test_base.py  test_htcondor.py  test_lsf.py  test_slurm.py  test_ts.py
tests/core/: test_config.py  test_display.py  test_filesystem.py  test_fluka.py
